<resources>
    <string name="app_name">Draw8Guess</string>
    <string name="stats_title"><i><u>STATS</u></i></string>
    <string name="edit_clickable"><u><i>Edits</i></u></string>
    <string name="name">Name</string>
    <string name="play">Play</string>
    <string name="create_room">Create room</string>
    <string name="friends_title"><i><u>FRIEND LIST</u></i></string>
    <string name="info">INFO</string>
    <string name="share_with_your_friends">Share with your friends</string>
    <string name="theme">Theme</string>
    <string name="goal">Goal</string>
    <string name="it_s_your_turn">It\'s your turn!</string>
    <string name="draw_the_word">Draw the word:</string>
    <string name="draw">Draw</string>
    <string name="interval">Interval</string>
    <string name="ok">OK</string>
    <string name="new_turn">New turn!</string>
    <string name="it_s_the_turn_of">It\'s the turn of</string>
    <string name="the_answer_was">The answer was:</string>
    <string name="take_a_while_to_relax">Take a while to relax</string>
    <string name="waiting_for_player">Waiting for owner to start</string>
    <string name="waiting">Waiting</string>
    <string name="the_winner_is">The winner is</string>
    <string name="you_are_already_in_this_room_or_someone_has_the_same_nickname_as_you">You are already in this room or someone has the same nickname as you</string>
    <string name="you_have_been_kicked_by_everyone">You have been kicked by everyone!</string>
    <string-array name="languages_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>