<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="200dp"
    android:layout_margin="5dp"
    android:background="@drawable/my_border">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/it_s_your_turn"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/draw_the_word"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginBottom="15dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="APPLE"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/draw"
        />
</LinearLayout>